--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,10 +19,10 @@ target_link_libraries(avx2 rt)
 target_include_directories(avx2 PRIVATE avx2/)
 target_sources(avx2 PRIVATE avx2/contains_char.c)
 
-add_library(sse STATIC)
-target_link_libraries(sse rt)
-target_include_directories(sse PRIVATE sse/)
-target_sources(sse PRIVATE sse/contains_char.c)
+add_library(sse4_2 STATIC)
+target_link_libraries(sse4_2 rt)
+target_include_directories(sse4_2 PRIVATE sse4_2/)
+target_sources(sse4_2 PRIVATE sse4_2/contains_char.c)
 
 add_library(scalar STATIC)
 target_link_libraries(scalar rt)
